# miraset-chain

./: .dockerignore  .gitignore  AGENTS.md  BUILD_FIX_COMPLETE.md  CHECKLIST.md  COMPLETE_STATUS.md  COMPLETE_SUMMARY.md  CONFIGURATION.md  Cargo.toml  DOCKER_STATUS.md  Dockerfile  FINAL_REPORT.md  FINAL_STATUS.md  IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  MOVE_VM_STATUS.md  NEXT_STEPS_COMPLETE.md  PERSISTENCE.md  PERSISTENCE_SUMMARY.md  POCC_IMPLEMENTATION.md  PORT_FIX_SUMMARY.md  QUICK_CONFIG.md  QUICK_REFERENCE.md  README.md  SUI_COMPARISON_ANALYSIS.md  SUI_COMPARISON_DETAILED.md  SUI_IMPLEMENTATION_COMPLETE.md  SUI_MIGRATION_SUMMARY.md  SUI_SUMMARY.md  TASK_COMPLETION_SUMMARY.md  TESTING.md  USER_GUIDE.md  VERIFICATION_COMPLETE.md  WINDOWS_FIX.md  WORKER_COMPLETE.md  WORKER_INTEGRATION.md  check_before_worker.sh  docker-compose.test.yml  docker-compose.yml  miraset.toml  (+12 more)
.github/instructions/: copilot.md
crates/miraset-cli/: Cargo.toml
crates/miraset-cli/src/: main.rs
crates/miraset-core/: Cargo.toml
crates/miraset-core/src/: crypto.rs  lib.rs  types.rs
crates/miraset-indexer/: Cargo.toml
crates/miraset-indexer/src/: lib.rs
crates/miraset-launcher/: Cargo.toml  README.md
crates/miraset-launcher/src/: main.rs
crates/miraset-node/: Cargo.toml
crates/miraset-node/src/: epoch.rs  executor.rs  gas.rs  lib.rs  move_vm.rs  pocc.rs  pocc_manager.rs  rpc.rs  state.rs  storage.rs
crates/miraset-tui/: Cargo.toml
crates/miraset-tui/src/: main.rs
crates/miraset-wallet/: Cargo.toml
crates/miraset-wallet/src/: lib.rs
crates/miraset-worker/: Cargo.toml  README.md
crates/miraset-worker/src/: backend.rs  lib.rs  main.rs  node_client.rs  receipt.rs
docs/: API_NODE.md  API_WORKER.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  CONFIGURATION.md  CONFIG_IMPLEMENTATION.md  DATA.md  DOCKER.md  IDEA.md  INDEXER_DESIGN.md  MOVE_INTEGRATION_GUIDE.md  PERSISTENCE.md  PRODUCT_OVERVIEW.md  QUICKSTART.md  QUICK_CONFIG.md  QUICK_REFERENCE.md  REWARDS.md  SOW.md  SOW_WALLET.md  START_HERE.md  STATUS.md  STATUS_REPORT.md  SUI_IMPLEMENTATION.md  SUI_ROADMAP.md  TESTING.md  TEST_REPORT.md  TEST_SCRIPTS.md  USER_GUIDE.md  WORKER_IMPLEMENTATION.md  WORKER_INTEGRATION.md
docs/whitepaper/: DESCRIPTION.md  WHITEPAPER.md  WHITEPAPER_EXTENDED.md
examples/: sui_demo.rs
scripts/: demo.sh  package-wallet.sh
tests/: integration_tests.rs
tools/launcher/: README.md  build-and-package.bat  build-and-package.sh  launch.bat  launch.sh
wallet/: README.md  package.json
wallet/scripts/: package-zip.mjs
wallet/src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
wallet/src-tauri/src/: main.rs
wallet/src/app/: globals.css  layout.tsx  page.tsx
