[workspace]
resolver = "2"
members = [
    "crates/miraset-cli",
    "crates/miraset-tui",
    "crates/miraset-core",
    "crates/miraset-node",
    "crates/miraset-wallet",
    "crates/miraset-indexer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Miraset Contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "=1.3.3"

# Crypto
ed25519-dalek = "2.1.1"
rand = "0.8"
blake3 = "1.5"
hex = "0.4"

# Networking
axum = "0.8.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "migrate", "json"] }
sled = "0.34"

# CLI/TUI
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.30.0"
crossterm = "0.29.0"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0.18"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utils
bytes = "1.8"
parking_lot = "0.12"
toml = "0.8"

# Move VM and related dependencies
move-vm-runtime = { git = "https://github.com/MystenLabs/sui", rev = "mainnet-v1.21.0" }
move-core-types = { git = "https://github.com/MystenLabs/sui", rev = "mainnet-v1.21.0" }
move-binary-format = { git = "https://github.com/MystenLabs/sui", rev = "mainnet-v1.21.0" }
move-bytecode-verifier = { git = "https://github.com/MystenLabs/sui", rev = "mainnet-v1.21.0" }
move-vm-types = { git = "https://github.com/MystenLabs/sui", rev = "mainnet-v1.21.0" }
sui-types = { git = "https://github.com/MystenLabs/sui", rev = "mainnet-v1.21.0" }
sui-framework = { git = "https://github.com/MystenLabs/sui", rev = "mainnet-v1.21.0" }

# Gas metering
once_cell = "1.19"

