[package]
name = "miraset-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
ed25519-dalek.workspace = true
blake3.workspace = true
hex.workspace = true
chrono.workspace = true
thiserror.workspace = true
bytes.workspace = true
rand.workspace = true
