[package]
name = "miraset-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
miraset-core = { path = "../miraset-core" }
tokio.workspace = true
sqlx.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
