[package]
name = "miraset-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
miraset-core = { path = "../miraset-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
parking_lot.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
sled.workspace = true
blake3.workspace = true

# Move VM dependencies (optional - comment out if not using full Move VM)
# To enable: uncomment and ensure correct Sui git revision
# move-vm-runtime.workspace = true
# move-core-types.workspace = true
# move-binary-format.workspace = true
# move-bytecode-verifier.workspace = true
# move-vm-types.workspace = true
# sui-types.workspace = true
# sui-framework.workspace = true

# Gas metering
once_cell.workspace = true

[dev-dependencies]
tempfile = "3.8"

