[package]
name = "miraset-wallet"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
miraset-core = { path = "../miraset-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
hex.workspace = true
rand.workspace = true

# D9: Wallet encryption
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"

[dev-dependencies]
tempfile = "3.8"

