[package]
name = "wallet-miraset"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
anyhow = "1.0"
bincode = "1.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5.4", features = [] }

miraset-core = { path = "../../crates/miraset-core" }
miraset-wallet = { path = "../../crates/miraset-wallet" }

[features]
custom-protocol = ["tauri/custom-protocol"]

[workspace]
